update split envs

--- a/backend/social_app/envs/develop.env
+++ b/backend/social_app/envs/develop.env
@@ -1,6 +1,7 @@
 # Django
 DEBUG=True
 ALLOWED_HOSTS=*
+DJANGO_SETTINGS_MODULE=social_app.settings.develop
 
 # Database (local SQLite hoặc Postgres)
 DB_ENGINE=django.db.backends.sqlite3
